

.. towncrier release notes start

6.4.0 (2022-01-24)
==================

Features
--------

- When an installer user agent is detected the full list of projects is returned unsorted and with less info to improve performance and reduce memory usage.


Bug Fixes
---------

- Use ``__slots__`` for some classes to reduce memory usage.

- Fix exceptions related to logging for some edge cases.


6.3.1 (2021-12-07)
==================

Bug Fixes
---------

- Fix #864: enable settings from ``~/.netrc`` and ``HTTP_PROXY``/``HTTPS_PROXY`` env vars for aiohttp.


6.3.0 (2021-11-19)
==================

Features
--------

- Use aiohttp (asyncio) for fetching release links from mirrors to return stale links immediately in case of a timeout, but update the database in the background for the next request.


Bug Fixes
---------

- fix #853: prevent duplicate mirror indexes in sro method when there are multiple inheritance chains to the same mirror

- fix #860: don't check for existing files and validate them during mirror links update, the operation is way to expensive and there is a low possibility for errors.

- Add missing `lazy` package dependency. Previously this was only a transitive dependency coming from the devpi-common package.


6.2.0 (2021-08-12)
==================

Bug Fixes
---------

- Optimized some database access patterns. A new index is added to the database on first startup. For large databases that can take a while.

- Improved performance of loads from database.

- Optimized memory and cache use for database access.

- Use frozenset for project name cache of mirror indexes. This mitigates memory fragmentation on some Linux distributions.


6.1.0 (2021-07-11)
==================

Deprecations and Removals
-------------------------

- Renamed 'pypi_submit' permission to 'upload'. The old permission still works, but will be removed in a later major release.


Features
--------
