@@ -176,13 +176,13 @@ jobs:
       matrix:
         include:
           - project: "server"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36"
+            tox-envs: "py37"
           - project: "server"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36-keyfs_sqlite"
+            tox-envs: "py37-keyfs_sqlite"
           - project: "server"
             python-version: "3.10"
             os: "ubuntu-latest"
@@ -221,13 +221,13 @@ jobs:
       matrix:
         include:
           - project: "web"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36"
+            tox-envs: "py37"
           - project: "web"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36-keyfs"
+            tox-envs: "py37-keyfs"
           - project: "web"
             python-version: "3.10"
             os: "ubuntu-latest"
@@ -316,17 +316,17 @@ jobs:
       matrix:
         include:
           - project: "postgresql"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36-postgresql"
+            tox-envs: "py37-postgresql"
           - project: "postgresql"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36-server"
+            tox-envs: "py37-server"
           # - project: "postgresql"
-          #   python-version: "3.6"
+          #   python-version: "3.7"
           #   os: "ubuntu-latest"
-          #   tox-envs: "py36-server_postgresql_ssl"
+          #   tox-envs: "py37-server_postgresql_ssl"
           - project: "postgresql"
             python-version: "3.10"
             os: "ubuntu-latest"
@@ -388,9 +388,9 @@ jobs:
       matrix:
         include:
           - project: "postgresql"
-            python-version: "3.6"
+            python-version: "3.7"
             os: "ubuntu-latest"
-            tox-envs: "py36-web"
+            tox-envs: "py37-web"
           - project: "postgresql"
             python-version: "3.10"
             os: "ubuntu-latest"
