@@ -53,7 +53,7 @@ setup(
         "Programming Language :: Python :: Implementation :: PyPy",
         "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"] + [
             "Programming Language :: Python :: %s" % x
-            for x in "3.6 3.7 3.8 3.9 3.10".split()],
+            for x in "3.7 3.8 3.9 3.10".split()],
     entry_points={
         'devpi_server': [
             "devpi-postgresql = devpi_postgresql.main"],
@@ -63,6 +63,6 @@ setup(
         'devpi-server>=3.0.0.dev2',
         'pg8000>=1.14.0'],
     include_package_data=True,
-    python_requires='>=3.6',
+    python_requires='>=3.7',
     zip_safe=False,
     packages=['devpi_postgresql', 'pytest_devpi_postgresql'])
