@@ -1,5 +1,5 @@
 [tox]
-envlist = {py36,py38,pypy3}-{postgresql,server,server_postgresql_ssl}
+envlist = {py37,py310,pypy3}-{postgresql,server,server_postgresql_ssl}
 
 
 [testenv]
