@@ -1,5 +1,5 @@
 [tox]
-envlist=py36{,-keyfs_sqlite},py38,pypy3
+envlist=py37{,-keyfs_sqlite},py310,pypy3
 
 [testenv]
 setenv =
