@@ -1,5 +1,5 @@
 [tox]
-envlist = py35-server520,py36{,-keyfs},py38,pypy3
+envlist = py35-server520,py37{,-keyfs},py310,pypy3
 
 
 [testenv]
